--- a/omop_exercises_solution.Rmd
+++ b/omop_exercises_solution.Rmd
@@ -4,7 +4,7 @@ subtitle: "Learning to explore and analyze OMOP data with DataSHIELD"
 freeze: true
 format: 
   html:
-    code-copy: true
+    code-copy: false
     toc: true
     toc-depth: 3
 execute:
@@ -18,19 +18,7 @@ execute:
 <i class="bi bi-download"></i> Run the solution yourself!
 </a>
 
-# Introduction
-
-This tutorial will guide you through exploring and analyzing OMOP data using DataSHIELD. You'll work with a real dataset from the African Population and Health Research Center (APHRC), discovering what type of study it is through systematic exploration.
-
-## Learning Objectives
-
-By the end of this tutorial, you will learn how to:
-
-- Connect to an OMOP database through DataSHIELD
-- Explore available data systematically to understand the study design
-- Transform OMOP concepts into analyzable variables
-- Perform privacy-preserving statistical analyses
-- Build and interpret statistical models with federated data
+# Solution
 
 ## Setup
 
@@ -53,11 +41,9 @@ httr::set_config(httr::config(ssl_verifypeer = 0L, ssl_verifyhost = 0L))
 
 Let's connect to the mystery dataset and see what we can discover!
 
-```{r exercise1}
-cat("\n==================================================\n")
-cat("EXERCISE 1: Connect to the server and explore the data structure\n")
-cat("==================================================\n\n")
+## Exercise 1: Connect to the server and explore the data structure
 
+```{r exercise1}
 # Create a connection to the OMOP DataSHIELD server
 builder <- newDSLoginBuilder()
 builder$append(server="aphrc",
@@ -78,7 +64,6 @@ o <- ds.omop.helper(
 )
 
 # Check the initial data summary
-cat("Initial data summary:\n")
 ds.summary("data")
 ```
 
@@ -86,150 +71,184 @@ ds.summary("data")
 
 Let's investigate the characteristics of our study population.
 
-```{r exercise2}
-cat("\n\n==================================================\n")
-cat("EXERCISE 2: Who Are We Studying?\n")
-cat("==================================================\n\n")
+## Exercise 2: Who Are We Studying?
 
+### Task 2.1: Gender distribution
+
+```{r exercise2-gender}
 # First Clue - Gender Distribution
-cat("Task 2.1: Gender distribution\n")
 ds.table("data$gender_concept_id")
-cat("\nObservation: All participants are female! This is our first clue.\n")
+```
 
+**Observation**: All participants are female! This is our first clue.
+
+### Task 2.2: Age distribution
+
+```{r exercise2-age}
 # Second Clue - Age Distribution
-cat("\nTask 2.2: Age distribution\n")
 ds.assign(
   toAssign = "2025 - data$year_of_birth",
   newobj = "age",
   datasources = conns
 )
-cat("Age statistics:\n")
+
+# Age statistics
 ds.mean("age", datasources = conns)
 ds.quantileMean("age", datasources = conns)
-cat("\nObservation: Women of reproductive age (roughly 30-45)\n")
-
-# Sample Size
-cat("\nTask 2.3: Sample size\n")
-print(ds.dim("data"))
-cat("\nWe have 188 female participants of reproductive age. What might they have in common?\n")
 ```
+
+**Observation**: Women of reproductive age (roughly 30-45)
+
+### Task 2.3: Sample size
+
+```{r exercise2-size}
+# Sample Size
+ds.dim("data")
+```
+
+We have 188 female participants of reproductive age. What might they have in common?
 
 # Exercise 3: What Was Measured?
 
 Now let's explore what types of data were collected.
 
-```{r exercise3}
-cat("\n\n==================================================\n")
-cat("EXERCISE 3: What Was Measured?\n")
-cat("==================================================\n\n")
+## Exercise 3: What Was Measured?
 
+### Task 3.1: Available conditions
+
+```{r exercise3-conditions}
 # Explore Conditions (Diagnoses)
-cat("Task 3.1: Available conditions:\n")
 cond_concepts <- o$concepts("condition_occurrence")
-print(cond_concepts)
-cat("\nReveal: Depression during and after pregnancy! This is a maternal mental health study.\n")
-
-# Explore Measurements
-cat("\nTask 3.2: Clinical measurements:\n")
-meas_concepts <- o$concepts("measurement")
-print(meas_concepts)
-cat("\nThe Edinburgh Postnatal Depression Scale - a standard tool for screening maternal depression\n")
-
-# Explore Observations
-cat("\nTask 3.3: Social and demographic factors:\n")
-obs_concepts <- o$concepts("observation")
-print(obs_concepts)
-cat("\nKey factors: Employment, marital status, household size, religion, education\n")
-cat("These social determinants can influence mental health outcomes!\n")
+cond_concepts
 ```
+
+**Reveal**: Depression during and after pregnancy! This is a maternal mental health study.
+
+### Task 3.2: Clinical measurements
+
+```{r exercise3-measurements}
+# Explore Measurements
+meas_concepts <- o$concepts("measurement")
+meas_concepts
+```
+
+The Edinburgh Postnatal Depression Scale - a standard tool for screening maternal depression
+
+### Task 3.3: Social and demographic factors
+
+```{r exercise3-observations}
+# Explore Observations
+obs_concepts <- o$concepts("observation")
+obs_concepts
+```
+
+**Key factors**: Employment, marital status, household size, religion, education  
+These social determinants can influence mental health outcomes!
 
 # Exercise 4: Building Your Analysis Dataset
 
 Let's retrieve the variables we need for our analysis.
 
-```{r exercise4}
-cat("\n\n==================================================\n")
-cat("EXERCISE 4: Building Your Analysis Dataset\n")
-cat("==================================================\n\n")
+## Exercise 4: Building Your Analysis Dataset
 
-# Retrieve the main clinical measurement
-cat("Task 4.1: Retrieving Edinburgh Postnatal Depression Scale...\n")
+### Task 4.1: Retrieving Edinburgh Postnatal Depression Scale
+
+```{r exercise4-edinburgh}
 o$auto(tables="measurement", 
        concepts=4164838,
        columns="value_as_number")
 
-cat("\nData structure after adding Edinburgh scale:\n")
+# Check data structure after adding Edinburgh scale
 ds.summary("data")
-cat("\n✓ Added: edinburgh_postnatal_depression_scale.value_as_number\n")
+```
 
-# Add Social Determinants
-cat("\nTask 4.2: Retrieving social determinants...\n")
+✓ **Added**: edinburgh_postnatal_depression_scale.value_as_number
 
+### Task 4.2: Retrieving social determinants
+
+```{r exercise4-social}
 # Employment status
-cat("- Adding employment status...\n")
 o$auto(tables="observation",
        concepts=44804285,
        columns="value_as_concept_id")
 
-# Other social factors
-cat("- Adding marital status, household size, and religious affiliation...\n")
+# Other social factors (marital status, household size, religious affiliation)
 o$auto(tables="observation",
        concepts=c(4053609, 4075500, 4052017),
        columns="value_as_concept_id")
 
 # Education level
-cat("- Checking for education level...\n")
 o$auto(tables="observation",
        concepts=42528763,
        columns="value_as_concept_id")
 
-cat("\nCurrent variables in our dataset:\n")
+# Current variables in our dataset
 current_vars <- ds.colnames("data")[[1]]
-print(current_vars)
+current_vars
+```
 
+✓ **Added social factors**: employment, marital_status, number_in_household, religious_affiliation
+
+### Task 4.3: Retrieving depression diagnoses
+
+```{r exercise4-diagnoses}
 # Retrieve the Diagnoses
-cat("\nTask 4.3: Retrieving depression diagnoses...\n")
 o$auto(tables="condition_occurrence",
        concepts=c(4239471, 37312479),
        columns="condition_occurrence_id")
 
 # Final check
-cat("\nFinal data structure:\n")
 ds.summary("data")
 ```
+
+### Summary of Retrieved Variables
+
+**Clinical Measurement**:
+
+- Edinburgh Postnatal Depression Scale (continuous score)
+
+**Social/Demographic Factors**:
+
+- Employment status
+- Marital status
+- Number in household
+- Religious affiliation
+- Education level
+
+**Clinical Diagnoses**:
+
+- Antenatal depression (during pregnancy)
+- Postpartum depression (after delivery)
 
 # Exercise 5: The Data Transformation Challenge
 
 The depression diagnoses are stored as IDs. Let's understand why we need to transform them.
 
-```{r exercise5}
-cat("\n\n==================================================\n")
-cat("EXERCISE 5: The Data Transformation Challenge\n")
-cat("==================================================\n\n")
+## Exercise 5: The Data Transformation Challenge
 
-cat("Examining the depression diagnosis columns...\n")
-cat("These are stored as condition_occurrence_id values (long ID numbers)\n")
-cat("We need to transform these into analyzable boolean (0/1) variables\n\n")
+The depression diagnoses are stored as condition_occurrence_id values (long ID numbers). We need to transform these into analyzable boolean (0/1) variables.
+
+```{r exercise5}
 
 # Let's see what columns we have now
 current_cols <- ds.colnames("data")[[1]]
 depression_cols <- grep("depression.*condition_occurrence_id", current_cols, value = TRUE)
-cat("Depression-related columns:\n")
-print(depression_cols)
+# Depression-related columns:
+depression_cols
 ```
 
 # Exercise 6: Converting OMOP IDs to Boolean Variables
 
 Here's how we transform the condition IDs into analyzable format:
 
-```{r exercise6}
-cat("\n\n==================================================\n")
-cat("EXERCISE 6: Transform condition IDs to analyzable format\n")
-cat("==================================================\n\n")
+## Exercise 6: Converting OMOP IDs to Boolean Variables
+
+Here's how we transform the condition IDs into analyzable format:
+
+```{r exercise6-function}
 
 # Function to convert OMOP IDs to boolean variables
 convert_to_boolean <- function(table, variable_name, id_type, conns) {
-  cat(sprintf("Converting %s to boolean...\n", variable_name))
   
   # Step 1: Construct the full variable name
   full_variable_name <- paste0(table, "$", variable_name, ".", id_type)
@@ -254,16 +273,26 @@ convert_to_boolean <- function(table, variable_name, id_type, conns) {
   )
 }
 
+```
+
+### Convert depression variables to boolean format
+
+```{r exercise6-convert}
 # Convert antenatal depression to boolean
 convert_to_boolean("data", "antenatal_depression", "condition_occurrence_id", conns)
 
 # Convert postpartum depression to boolean
 convert_to_boolean("data", "postpartum_depression", "condition_occurrence_id", conns)
 
-# Check the distribution of these new variables
-cat("\nAntenatal depression prevalence:\n")
+```
+
+### Check the distribution of the new variables
+
+```{r exercise6-prevalence}
+# Antenatal depression prevalence
 ds.table("antenatal_depression")
-cat("\nPostpartum depression prevalence:\n")
+
+# Postpartum depression prevalence
 ds.table("postpartum_depression")
 ```
 
@@ -271,10 +300,11 @@ ds.table("postpartum_depression")
 
 Let's explore the depression patterns in our data.
 
-```{r exercise7}
-cat("\n\n==================================================\n")
-cat("EXERCISE 7: Understanding Depression Patterns\n")
-cat("==================================================\n\n")
+## Exercise 7: Understanding Depression Patterns
+
+### Edinburgh Score Distribution
+
+```{r exercise7-edinburgh}
 
 # Create a histogram of Edinburgh scores
 ds.assign(
@@ -283,18 +313,29 @@ ds.assign(
   datasources = conns
 )
 
-cat("Edinburgh score distribution:\n")
+# Edinburgh score distribution
 ds.histogram("edinburgh_score", datasources = conns)
+```
 
+### Edinburgh Score Statistics
+
+```{r exercise7-stats}
 # Calculate summary statistics for Edinburgh scores
-cat("\nEdinburgh score statistics:\n")
-cat("Mean:", ds.mean("edinburgh_score", datasources = conns)$Global.Mean[1], "\n")
-cat("Variance:", ds.var("edinburgh_score", datasources = conns)$Global.Variance[1], "\n")
-cat("Quantiles:\n")
-print(ds.quantileMean("edinburgh_score", datasources = conns))
+mean_score <- ds.mean("edinburgh_score", datasources = conns)
+var_score <- ds.var("edinburgh_score", datasources = conns)
+quantiles <- ds.quantileMean("edinburgh_score", datasources = conns)
 
+list(
+  Mean = mean_score$Global.Mean[1],
+  Variance = var_score$Global.Variance[1],
+  Quantiles = quantiles
+)
+```
+
+### Cross-tabulation of Depression Types
+
+```{r exercise7-crosstab}
 # Create a cross-tabulation of depression types
-cat("\nCross-tabulation of depression types:\n")
 ds.table(rvar = "antenatal_depression", cvar = "postpartum_depression", datasources = conns)
 ```
 
@@ -302,10 +343,11 @@ ds.table(rvar = "antenatal_depression", cvar = "postpartum_depression", datasour
 
 Let's explore correlations between variables.
 
-```{r exercise8}
-cat("\n\n==================================================\n")
-cat("EXERCISE 8: Explore correlations\n")
-cat("==================================================\n\n")
+## Exercise 8: Correlation Analysis
+
+### Prepare Variables for Correlation
+
+```{r exercise8-prep}
 
 # Create simplified variable names
 ds.assign("data$employment.value_as_concept_id", "employment", conns)
@@ -319,20 +361,25 @@ ds.dataFrame(
   datasources = conns
 )
 
+```
+
+### Correlation Matrix
+
+```{r exercise8-cor}
 # Calculate the correlation matrix
-cat("Correlation matrix:\n")
 cor_matrix <- ds.cor("cor_data", datasources = conns)
-print(cor_matrix)
+cor_matrix
 ```
 
 # Exercise 9: Building Statistical Models
 
 Now let's test some hypotheses with statistical models.
 
-```{r exercise9}
-cat("\n\n==================================================\n")
-cat("EXERCISE 9: Create and interpret GLM models\n")
-cat("==================================================\n\n")
+## Exercise 9: Building Statistical Models
+
+### Prepare Modeling Dataset
+
+```{r exercise9-prep}
 
 # Prepare all variables
 ds.assign("data$marital_status.value_as_concept_id", "marital_status", conns)
@@ -357,9 +404,13 @@ ds.cbind(
   datasources = conns
 )
 
-# Model 1: Simple linear regression
-cat("Model 1: Simple linear regression\n")
-cat("Research question: Do age and employment affect depression severity?\n\n")
+```
+
+### Model 1: Simple Linear Regression
+
+**Research question**: Do age and employment affect depression severity?
+
+```{r exercise9-model1}
 
 model1 <- ds.glm(
   formula = "edinburgh_score ~ age + employment",
@@ -368,12 +419,18 @@ model1 <- ds.glm(
   datasources = conns
 )
 
-cat("Model 1 Results:\n")
-print(model1$coefficients[, c("Estimate", "Std. Error", "p-value")])
+# NOTE: we use gaussian for the linear regression because edinburgh_score 
+# is a continuous variable
 
-# Model 2: Logistic regression for postpartum depression
-cat("\n\nModel 2: Logistic regression\n")
-cat("Research question: What predicts postpartum depression?\n\n")
+# Display results
+model1$coefficients[, c("Estimate", "Std. Error", "p-value")]
+```
+
+### Model 2: Logistic Regression
+
+**Research question**: What predicts postpartum depression?
+
+```{r exercise9-model2}
 
 model2 <- ds.glm(
   formula = "postpartum_depression ~ antenatal_depression + edinburgh_score + age",
@@ -382,13 +439,19 @@ model2 <- ds.glm(
   datasources = conns
 )
 
-cat("Model 2 Results (with Odds Ratios):\n")
-coef2 <- as.data.frame(model2$coefficients)
-print(coef2[, c("Estimate", "P_OR", "low0.95CI.P_OR", "high0.95CI.P_OR", "p-value")])
+# NOTE: we use binomial for the logistic regression because postpartum_depression 
+# is a binary variable
 
-# Model 3: Comprehensive model
-cat("\n\nModel 3: Comprehensive model\n")
-cat("Research question: How do social factors influence depression severity?\n\n")
+# Display results with odds ratios
+coef2 <- as.data.frame(model2$coefficients)
+coef2[, c("Estimate", "P_OR", "low0.95CI.P_OR", "high0.95CI.P_OR", "p-value")]
+```
+
+### Model 3: Comprehensive Model
+
+**Research question**: How do social factors influence depression severity?
+
+```{r exercise9-model3}
 
 model3 <- ds.glm(
   formula = "edinburgh_score ~ age + employment + marital_status + household_size + antenatal_depression + postpartum_depression",
@@ -397,27 +460,19 @@ model3 <- ds.glm(
   datasources = conns
 )
 
-cat("Model 3 Results:\n")
+# Display results
 coef3 <- as.data.frame(model3$coefficients)
-significant <- coef3[coef3$`p-value` < 0.05, ]
-if(nrow(significant) > 0) {
-  cat("\nSignificant predictors (p < 0.05):\n")
-  print(significant[, c("Estimate", "Std. Error", "p-value")])
-} else {
-  cat("\nNo significant predictors at p < 0.05\n")
-}
+coef3[, c("Estimate", "Std. Error", "p-value")]
 ```
 
-# Exercise 10: Advanced Analysis - Interaction Effects
 
-Let's test for interaction effects between variables.
+# Challenge: Create Your Own Research Question
+
+This is just an example of how you can create your own research question:
+
+**Research question**: Does employment modify the effect of antenatal depression?
 
 ```{r exercise10}
-cat("\n\n==================================================\n")
-cat("EXERCISE 10: Test for interaction effects\n")
-cat("==================================================\n\n")
-
-cat("Testing interaction: Does employment modify the effect of antenatal depression?\n\n")
 
 model4 <- ds.glm(
   formula = "edinburgh_score ~ antenatal_depression * employment + age",
@@ -430,8 +485,7 @@ model4 <- ds.glm(
 coef4 <- as.data.frame(model4$coefficients)
 interaction_terms <- grep(":", rownames(coef4), value = TRUE)
 if(length(interaction_terms) > 0) {
-  cat("Interaction effects:\n")
-  print(coef4[interaction_terms, c("Estimate", "Std. Error", "p-value")])
+  coef4[interaction_terms, c("Estimate", "Std. Error", "p-value")]
 }
 ```
 
@@ -443,32 +497,3 @@ Always remember to log out from the servers!
 # Very important!!!
 datashield.logout(conns)
 ```
-
-# Summary
-
-In this tutorial, you've learned how to:
-
-1. **Connect to OMOP data** through DataSHIELD
-2. **Discover the nature of a dataset** through systematic exploration
-3. **Transform OMOP concepts** into analyzable variables using boolean conversion
-4. **Perform statistical analyses** while preserving privacy
-5. **Build and interpret models** with federated data
-
-## Key Findings from Our Analysis
-
-Through exploration, we discovered this was a **maternal mental health study** from APHRC with:
-- 188 female participants of reproductive age
-- 38% experiencing antenatal depression
-- 17% experiencing postpartum depression
-- Strong correlation between Edinburgh scores and depression diagnoses
-- Complex relationships between social factors and mental health outcomes
-
-## Next Steps
-
-Consider exploring:
-- Time-based analyses if longitudinal data is available
-- More complex interaction effects
-- Machine learning approaches with DataSHIELD
-- Integration with other OMOP databases for meta-analysis
-
-Remember: The power of DataSHIELD lies in its ability to analyze sensitive health data while preserving privacy!
