--- a/DataSHIELD_workshop_APHRC_tables.Rmd
+++ b/DataSHIELD_workshop_APHRC_tables.Rmd
@@ -704,3 +704,27 @@ Then, load the tables in R as data.frame’s using the functions available in th
 <a href="#" onclick="event.preventDefault(); fetch('https://raw.githubusercontent.com/isglobal-brge/workshop_DSWB/main/Exercise_tables.R').then(response => response.blob()).then(blob => { const url = window.URL.createObjectURL(blob); const a = document.createElement('a'); a.style.display = 'none'; a.href = url; a.download = 'Exercise_tables.R'; document.body.appendChild(a); a.click(); window.URL.revokeObjectURL(url); }); return false;" class="btn btn-primary btn-sm">
 <i class="bi bi-download"></i> Download the solution
 </a>
+
+# Exercise: UKBiobank Meta-Analysis
+
+We have access to 3 datasets corresponding to simulated data from UKBiobank available through CINECA study. This data reproduce the exact associations found at UKBiobank. The datasets are accessed in three Opal servers:
+
+**Server 1:**
+
+- URL: https://opal-demo.obiba.org/ (user: administrator, pwd: password)
+- Project: GWAS
+- Table: ega_phenotypes_1
+
+**Server 2:**
+
+- URL: https://opal-demo.obiba.org/ (user: administrator, pwd: password)
+- Project: GWAS
+- Table: ega_phenotypes_1
+
+**Server 3:**
+
+- URL: https://opal-demo.obiba.org/ (user: administrator, pwd: password)
+- Project: GWAS
+- Table: ega_phenotypes_1
+
+Fit a regression model between diabetes (variable diabetes_diagnosed_doctor) and cholesterol level (variable cholesterol) using meta-analysis approach and compute the pooled effect.
